# cppad_py

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  MANIFEST.in  README.md  a_double.cpp  a_fun.cpp  batch_edit.sed  cppad_py.xrst  cppad_swig.i  cppad_swig.omh  doc.omh  doc.xrst  doc.xsrst  function.cpp  install_error.omh  install_error.xrst  install_error.xsrst  news_2017.omh  old_setup.py  pyproject.toml  readme.md  setup.py  testing.omh  xrst.toml
example/: CMakeLists.txt  check_example_r.sh  check_swig_example.R  check_swig_example.py  check_swig_example_r.sh  example.cpp  example.hpp  example.i  example_lib.omh  function.cpp  normal_class.cpp  swig_example.cpp  swig_example.hpp  swig_example.i  template_class.hpp
example/cplusplus/: CMakeLists.txt  a_double_assign_xam.cpp  a_double_binary_xam.cpp  a_double_compare_xam.cpp  a_double_cond_assign_xam.cpp  a_double_property_xam.cpp  a_double_unary_fun_xam.cpp  a_double_unary_op_xam.cpp  build_type_xam.cpp  check_all.cpp  error_message_xam.cpp  exception_xam.cpp  fun_abort_xam.cpp  fun_check_for_nan_xam.cpp  fun_dynamic_xam.cpp  fun_forward_xam.cpp  fun_hessian_xam.cpp  fun_jacobian_xam.cpp  fun_json_xam.cpp  fun_optimize_xam.cpp  fun_property_xam.cpp  fun_reverse_xam.cpp  sparse_hes_pattern_xam.cpp  sparse_hes_xam.cpp  sparse_jac_pattern_xam.cpp  sparse_jac_xam.cpp  sparse_rc_xam.cpp  sparse_rcv_xam.cpp  vector_set_get_xam.cpp  vector_size_xam.cpp
example/octave/: CMakeLists.txt  check_example.m  check_m_example.m
example/perl/: CMakeLists.txt  check_example.pl  check_pl_example.pl
example/python/: CMakeLists.txt  a_double_assign_xam.py  a_double_binary_xam.py  a_double_compare_xam.py  a_double_property_xam.py  a_double_unary_fun_xam.py  check_all.py.in  check_py_example.py  error_message_xam.py  fun_abort_xam.py  fun_forward_xam.py  fun_json_xam.py  fun_property_xam.py  scipy_optimize_xam.py  sparse_hes_pattern_xam.py  sparse_jac_pattern_xam.py  sparse_jac_xam.py  sparse_rc_xam.py  vector_size_xam.py
example/python/core/: a_double_assign_xam.py  a_double_binary_xam.py  a_double_compare_xam.py  a_double_cond_assign_xam.py  a_double_property_xam.py  a_double_unary_fun_xam.py  a_double_unary_op_xam.py  a_fun_xam.py  build_type_xam.py  cppad_error_xam.py  error_message_xam.py  exception_xam.py  fun_abort_xam.py  fun_check_for_nan_xam.py  fun_dynamic_xam.py  fun_forward_xam.py  fun_hessian_xam.py  fun_jacobian_xam.py  fun_json_xam.py  fun_optimize_xam.py  fun_property_xam.py  fun_reverse_xam.py  sparse_hes_pattern_xam.py  sparse_hes_xam.py  sparse_jac_pattern_xam.py  sparse_jac_xam.py  sparse_rc_xam.py  sparse_rcv_xam.py  vector_set_get_xam.py  vector_size_xam.py
example/python/mixed/: ctor_xam.py  fatal_error_xam.py  fix_constraint_xam.py  fix_likelihood_xam.py  hes_fixed_obj_xam.py  hes_random_obj_xam.py  optimize_fixed_1.py  optimize_fixed_2.py  optimize_fixed_xam.py  optimize_random_xam.py  ran_likelihood_xam.py  warning_xam.py
example/python/numeric/: covid_19_xam.py  numeric.omh  numeric.xrst  numeric.xsrst  ode_multi_step.py  ode_multi_step_xam.py  ode_one_step_xam.py  ode_runge_xam.py  ode_solve.py  optimize_fun_class.py  optimize_fun_xam.py  optimize_xam.py  rosen3_step.py  rosen3_step_xam.py  runge4.py  runge4_multi_step_xam.py  runge4_one_step_xam.py  runge4_step.py  runge4_step_xam.py  seird_model.py  seird_model_xam.py  seirs_class.py  seirs_fit_xam.py  seirs_model.py  seirs_model_xam.py  seirwd_model.py  seirwd_model_xam.py  simple_inv.py  simple_inv_xam.py
lib/: CMakeLists.txt  a_double.cpp  a_fun.cpp  a_other.cpp  a_vector.omh  cppad_py.i  cppad_py_swig.i  cppad_swig.i  cppad_swig_lib.omh  error.cpp  function.cpp  library.omh  library.xrst  library.xsrst  more_cppad.omh  octave.m4  other.cpp  perl.m4  python.m4  sparse.cpp  vector.omh
lib/cplusplus/: CMakeLists.txt  a_double.cpp  a_double_xam.cpp  a_fun.cpp  a_fun_xam.cpp  build_type.cpp  check_all.cpp  convert_vec.cpp  cplusplus.omh  cplusplus.xrst  cplusplus.xsrst  cpp_convert.cpp  cpp_lib.omh  cpp_lib.xrst  cpp_lib.xsrst  cppad_error.cpp  cppad_vec.cpp  error.cpp  fun.cpp  mixed.cpp  more_cpp.omh  more_cpp.xrst  sparse.cpp  utility.cpp  vector.omh  vector.xrst  vector.xsrst  vector_ad_xam.cpp  vector_double_xam.cpp
lib/example/: CMakeLists.txt  example.omh
lib/example/cplusplus/: CMakeLists.txt  a_double_ad_binary_xam.cpp  a_double_assign_xam.cpp  a_double_binary_xam.cpp  a_double_compare_xam.cpp  a_double_cond_assign_xam.cpp  a_double_property_xam.cpp  (+34 more)
lib/octave/: CMakeLists.txt  a_double_xam.m  a_fun_xam.m  check_all.m.in  vector_ad_xam.m  vector_double_xam.m
lib/perl/: CMakeLists.txt  a_double_xam.pm  a_fun_xam.pm  check_all.pl.in  vector_ad_xam.pm  vector_double_xam.pm
lib/python/: CMakeLists.txt  __init__.py  a_double_xam.py  a_fun.py  a_fun_ctor.py  a_fun_forward.py  a_fun_hessian.py  a_fun_jacobian.py  a_fun_objective.py  a_fun_optimize.omh  a_fun_property.omh  a_fun_reverse.py  a_fun_xam.py  abort_recording.omh  abort_recording.py  check_all.py.in  fun.py  fun_ctor.py  fun_forward.py  fun_hessian.py  fun_jacobian.py  fun_new_dynamic.py  fun_optimize.omh  fun_property.omh  fun_reverse.py  hes_sparsity.py  independent.py  jac_sparsity.omh  more_py.omh  py_lib.omh  sparse.omh  sparse_hes.py  sparse_jac.omh  sparse_jac.py  sparse_rc.py  sparse_rcd.py  sparse_rcv.py  utility.omh  utility.py  vector_ad_xam.py  (+1 more)
lib/xam/: a_double_xam.m4  a_double_xam.xam  a_fun_xam.m4  a_fun_xam.xam  cplusplus.m4  header.m4  lang_m4.omh  lang_name.m4  macro.omh  octave.m4  omhelp.m4  perl.m4  python.m4  vector_ad_xam.m4  vector_ad_xam.xam  vector_double_xam.m4  vector_double_xam.xam  xam.m4  xam_file_name.m4
swig_xam/: CMakeLists.txt  example.hpp  example.i  example_lib.omh  function.cpp  normal_class.cpp  swig_xam.hpp  swig_xam.i  swig_xam_hpp.omh  swig_xam_lib.omh  template_class.hpp
swig_xam/octave/: CMakeLists.txt  check_m_swig_xam.m  check_swig_xam.m
swig_xam/perl/: CMakeLists.txt  check_pl_example.pl  check_pl_swig_xam.pl  check_swig_xam.pl
swig_xam/python/: CMakeLists.txt  check_py_example.py  check_py_swig_xam.py  check_swig_xam.py
(+2352 files in other folders)
